--- a/public/index.html
+++ b/public/index.html
@@ -8,31 +8,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+<a href="https://github.com/rosenbjerg/passphraser" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 <div class="container">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <pre class="title">PassPhraser</pre>
     <pre class="u-full-width" id="pw"></pre>
+    <span id="copied" class="u-full-width">Copied!</span>
     <div class="row">
         <label>Separators</label>
-        <input class="u-full-width" type="text" id="sep" minlength="1" value="1 2 3 4 5 6 7 8 9 0 / % _ - @ $ & ? ! 42 * + # =" autocomplete="off" placeholder="Separators">
+        <input class="u-full-width" type="text" id="sep" disabled="true" minlength="1" value="1 2 3 4 5 6 7 8 9 0 / % _ - @ $ & ? ! 42 * + # =" autocomplete="off" placeholder="Separators">
     </div>
     <div class="row">
-        <div class="eight columns">
+        <div class="seven columns">
             <div class="three-cols" title="Randomly capitalize words">
                 <label>Capitalize words</label>
                 <input class="u-full-width" type="checkbox" id="cap">
             </div>
             <div class="three-cols" title="Only use white-space as separator">
-                <label>White-space separator</label>
+                <label>Custom separator</label>
                 <input class="u-full-width" type="checkbox" id="whitespace">
             </div>
             <div class="three-cols" title="Number of words in passphrase">
                 <label>Word count</label>
-                <input class="u-full-width" type="number" min="2" max="100" value="5" id="words">
+                <input class="u-full-width" type="number" min="2" max="100" step="1" value="6" id="words">
             </div>
         </div>
 
-        <div class="two columns">
+        <div class="three columns">
             <label>Language</label>
             <select class="u-full-width" multiple="multiple">
                 <option value="english" selected="selected">English</option>
